--- a/expresso-Shop-app/expresso-shop-product/templates/deployment.yaml
+++ b/expresso-Shop-app/expresso-shop-product/templates/deployment.yaml
@@ -40,6 +40,9 @@ spec:
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          envFrom:
+          - secretRef:
+              name: {{ .Values.name }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
