--- a/expresso-Shop-app/expresso-shop-review/templates/deployment1.yaml
+++ b/expresso-Shop-app/expresso-shop-review/templates/deployment1.yaml
@@ -40,6 +40,9 @@ spec:
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          envFrom:
+          - secretRef:
+              name: {{ .Values.app_name }} 
           env:
             {{- toYaml .Values.connection2 | nindent 12 }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
